[package]
name = "qesa"
version = "0.1.0"
authors = ["kev <decentralisedkev@gmail.com","ken shamir <shamirken@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "1.2.3"
rand = "0.6"
sha3 = "0.8.2"
merlin = "1.2.0"